--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.5",
+    "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.3",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.600.0",
+    "aws-sdk": "^2.1646.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -35,6 +39,8 @@
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "mongoose": "^8.4.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "qs": "^6.12.1",
     "winston": "^3.13.0"
   }
