--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "qs": "^6.12.1",
+    "ts-node": "^10.9.2",
     "winston": "^3.13.0"
   }
 }
