--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "_moduleAliases": {
-    "@": "src"
+    "@": "dist"
   },
   "scripts": {
-    "dev": "nodemon src/index.ts --watch"
+    "dev": "nodemon src/index.ts --watch",
+    "build": "tsc",
+    "start": "node -r module-alias/register dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +24,7 @@
     "@types/multer": "^1.4.11",
     "@types/multer-s3": "^3.0.3",
     "nodemon": "^3.1.4",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.2"
   },
   "dependencies": {
